@@ -1,45 +1,45 @@
-# Strings for Dialog Library W2XDialogs (untranslated)
+# Strings for Dialog Library W2XDialogs
 0.XhtmlOptions.HelpText=
-1.XhtmlOptions.Title=XHTML Options (Writer2xhtml)
+1.XhtmlOptions.Title=XHTML Optionen (Writer2xhtml)
 2.XhtmlOptions.StyleLabel.HelpText=
-3.XhtmlOptions.StyleLabel.Label=Style
+3.XhtmlOptions.StyleLabel.Label=Stil
 4.XhtmlOptions.ConfigLabel.HelpText=
-5.XhtmlOptions.ConfigLabel.Label=Use style
+5.XhtmlOptions.ConfigLabel.Label=Folgenden Stil verwenden
 6.XhtmlOptions.Config.HelpText=
 17.XhtmlOptions.ScalingLabel.HelpText=
-18.XhtmlOptions.ScalingLabel.Label=Scaling
+18.XhtmlOptions.ScalingLabel.Label=Skalierung
 19.XhtmlOptions.Scaling.HelpText=
 20.XhtmlOptions.ScalingPercentLabel.HelpText=
 21.XhtmlOptions.ScalingPercentLabel.Label=%
 22.XhtmlOptions.ColumnScalingLabel.HelpText=
-23.XhtmlOptions.ColumnScalingLabel.Label=Column scaling
+23.XhtmlOptions.ColumnScalingLabel.Label=Spaltenskalierung
 24.XhtmlOptions.ColumnScaling.HelpText=
 25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
 26.XhtmlOptions.ColumnScalingPercentLabel.Label=%
 27.XhtmlOptions.ConvertToPx.HelpText=
-28.XhtmlOptions.ConvertToPx.Label=Convert units to px (pixels)
+28.XhtmlOptions.ConvertToPx.Label=Einheiten in px (Pixel) umwandeln
 29.XhtmlOptions.OriginalImageSize.HelpText=
-30.XhtmlOptions.OriginalImageSize.Label=Use original image size
+30.XhtmlOptions.OriginalImageSize.Label=Original Bildgr\u00f6\u00dfe verwenden
 31.XhtmlOptions.SpecialContentLabel.HelpText=
-32.XhtmlOptions.SpecialContentLabel.Label=Special content
+32.XhtmlOptions.SpecialContentLabel.Label=Besonderer Inhalt
 33.XhtmlOptions.Notes.HelpText=
-34.XhtmlOptions.Notes.Label=Export notes
+34.XhtmlOptions.Notes.Label=Notizen exportieren
 35.XhtmlOptions.UseDublinCore.HelpText=
-36.XhtmlOptions.UseDublinCore.Label=Export document properties (Dublin Core Metadata)
+36.XhtmlOptions.UseDublinCore.Label=Dokumenteneigenschaften exportieren (Dublin Core Metadata)
 37.XhtmlOptions.AutoCorrectLabel.HelpText=
-38.XhtmlOptions.AutoCorrectLabel.Label=AutoCorrect
+38.XhtmlOptions.AutoCorrectLabel.Label=Autokorrektur
 39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
-40.XhtmlOptions.IgnoreHardLineBreaks.Label=Ignore hard line breaks
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Harte Zeilenumbr\u00fcche ignorieren
 41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
-42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Ignore empty paragraphs
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Leere Abs\u00e4tze ignorieren
 43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
-44.XhtmlOptions.IgnoreDoubleSpaces.Label=Ignore double spaces
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Doppelte Leerzeichen ignorieren
 45.XhtmlOptions.FilesLabel.HelpText=
-46.XhtmlOptions.FilesLabel.Label=Files
+46.XhtmlOptions.FilesLabel.Label=Dateien
 47.XhtmlOptions.Split.HelpText=
-48.XhtmlOptions.Split.Label=Split document at headings
+48.XhtmlOptions.Split.Label=Dokumente bei \u00dcberschriften trennen
 49.XhtmlOptions.SplitLevelLabel.HelpText=
-50.XhtmlOptions.SplitLevelLabel.Label=Heading level
+50.XhtmlOptions.SplitLevelLabel.Label=\u00dcberschriftenlevel
 51.XhtmlOptions.SplitLevel.HelpText=
 52.SplitLevel.StringItemList=1
 53.SplitLevel.StringItemList=2
@@ -48,7 +48,7 @@
 56.SplitLevel.StringItemList=5
 57.SplitLevel.StringItemList=6
 58.XhtmlOptions.RepeatLevelsLabel.HelpText=
-59.XhtmlOptions.RepeatLevelsLabel.Label=Repeat heading levels
+59.XhtmlOptions.RepeatLevelsLabel.Label=\u00dcberschriftenlevel wiederholen
 60.XhtmlOptions.RepeatLevels.HelpText=
 61.RepeatLevels.StringItemList=0
 62.RepeatLevels.StringItemList=1
@@ -57,67 +57,67 @@
 65.RepeatLevels.StringItemList=4
 66.RepeatLevels.StringItemList=5
 67.XhtmlOptions.SaveImagesInSubdir.HelpText=
-68.XhtmlOptions.SaveImagesInSubdir.Label=Save images in subdirectory
+68.XhtmlOptions.SaveImagesInSubdir.Label=Bilder in Unterverzeichnis speichern
 69.XhtmlOptions.XsltPathLabel.HelpText=
 70.XhtmlOptions.XsltPathLabel.Label=XSLT path
 71.XhtmlOptions.XsltPath.HelpText=
 72.XhtmlOptions.XsltPath.Text=
 73.XhtmlOptions.ExportButton.HelpText=
-74.XhtmlOptions.ExportButton.Label=Export
+74.XhtmlOptions.ExportButton.Label=Exportieren
 75.XhtmlOptions.CancelButton.HelpText=
-76.XhtmlOptions.CancelButton.Label=Cancel
+76.XhtmlOptions.CancelButton.Label=Abbrechen
 77.XhtmlOptionsCalc.HelpText=
-78.XhtmlOptionsCalc.Title=XHTML Options (Calc2xhtml)
+78.XhtmlOptionsCalc.Title=XHTML Optionen (Calc2xhtml)
 79.XhtmlOptionsCalc.StyleLabel.HelpText=
-80.XhtmlOptionsCalc.StyleLabel.Label=Style
+80.XhtmlOptionsCalc.StyleLabel.Label=Stil
 81.XhtmlOptionsCalc.ConfigLabel.HelpText=
-82.XhtmlOptionsCalc.ConfigLabel.Label=Use style
+82.XhtmlOptionsCalc.ConfigLabel.Label=Folgenden Stil verwenden
 83.XhtmlOptionsCalc.Config.HelpText=
 86.XhtmlOptionsCalc.ScalingLabel.HelpText=
-87.XhtmlOptionsCalc.ScalingLabel.Label=Scaling
+87.XhtmlOptionsCalc.ScalingLabel.Label=Skalierung
 88.XhtmlOptionsCalc.Scaling.HelpText=
 89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
 90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
 91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
-92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Column scaling
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Spaltenskalierung
 93.XhtmlOptionsCalc.ColumnScaling.HelpText=
 94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
 95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
 96.XhtmlOptionsCalc.ConvertToPx.HelpText=
-97.XhtmlOptionsCalc.ConvertToPx.Label=Convert units to px (pixels)
+97.XhtmlOptionsCalc.ConvertToPx.Label=Einheiten in px (Pixel) umwandeln
 98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
-99.XhtmlOptionsCalc.OriginalImageSize.Label=Use original image size
+99.XhtmlOptionsCalc.OriginalImageSize.Label=Original Bildgr\u00f6\u00dfe verwenden
 100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
-101.XhtmlOptionsCalc.SpecialContentLabel.Label=Special content
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Besonderer Inhalt
 102.XhtmlOptionsCalc.Notes.HelpText=
-103.XhtmlOptionsCalc.Notes.Label=Export notes
+103.XhtmlOptionsCalc.Notes.Label=Notizen exportieren
 104.XhtmlOptionsCalc.UseDublinCore.HelpText=
-105.XhtmlOptionsCalc.UseDublinCore.Label=Export document properties (Dublin Core Metadata)
+105.XhtmlOptionsCalc.UseDublinCore.Label=Dokumenteneigenschaften exportieren (Dublin Core Metadata)
 106.XhtmlOptionsCalc.SheetsLabel.HelpText=
-107.XhtmlOptionsCalc.SheetsLabel.Label=Sheets
+107.XhtmlOptionsCalc.SheetsLabel.Label=Tabellen
 108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
-109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Display hidden sheets
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Versteckte Tabellen anzeigen
 110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
-111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Display hidden rows and columns
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Versteckte Zeilen und Spalten anzeigen
 112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
-113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Display filtered rows and columns
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Gefilterte Zeilen und Spalten anzeigen
 114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
-115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Apply print ranges
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Druckr\u00e4nder anwenden
 116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
-117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Use title as heading
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Titel als \u00dcberschrift verwenden
 118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=
-119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Use sheet names as headings
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Tabellennamen als \u00dcberschrift verwenden
 120.XhtmlOptionsCalc.FilesLabel.HelpText=
-121.XhtmlOptionsCalc.FilesLabel.Label=Files
+121.XhtmlOptionsCalc.FilesLabel.Label=Dateien
 122.XhtmlOptionsCalc.CalcSplit.HelpText=
-123.XhtmlOptionsCalc.CalcSplit.Label=Save sheets in separate files
+123.XhtmlOptionsCalc.CalcSplit.Label=Tabellen in seperate Dateien speichern
 124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
-125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Save images in subdirectory
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Bilder in Unterverzeichnis speichern
 126.XhtmlOptionsCalc.ExportButton.HelpText=
-127.XhtmlOptionsCalc.ExportButton.Label=Export
+127.XhtmlOptionsCalc.ExportButton.Label=Exportieren
 128.XhtmlOptionsCalc.CancelButton.HelpText=
-129.XhtmlOptionsCalc.CancelButton.Label=Cancel
-130.Config.StringItemList=Original formatting
+129.XhtmlOptionsCalc.CancelButton.Label=Abbrechen
+130.Config.StringItemList=Original Formatierungen
 131.Config.StringItemList=Chocolate
 132.Config.StringItemList=Midnight
 133.Config.StringItemList=Modernist
@@ -126,6 +126,6 @@
 136.Config.StringItemList=Swiss
 137.Config.StringItemList=Traditional
 138.Config.StringItemList=Ultramarine
-139.Config.StringItemList=Custom
+139.Config.StringItemList=Benutzerdefiniert
 140.Config.StringItemList=Original formatting
-141.Config.StringItemList=Custom
+141.Config.StringItemList=Benutzerdefiniert
